# movie_viewer

./: .env.example  .gitignore  README.md  build_exe.bat  build_exe.sh  cache_utilis.py  const.py  get_lists.py  main.py  media.py  media_button.py  movie.py  pyproject.toml  requirements.txt  setting_menu.py  window.py
components/: details_window.py  episodes_window.py  main_window.py  media_button.py  play_window.py  search_window.py  setting_menu.py
media_classes/: __init__.py  media.py  movie.py  show.py
qt_utils/: load_media_worker.py  push_button.py
scripts/: build_dev.bat  build_dev.ps1  build_prd.bat  build_prd.ps1  pip_build_exe.bat  pip_build_exe.ps1  pip_build_exe.sh  uv_build_exe.bat  uv_build_exe.ps1  uv_build_exe.sh
services/: api_client.py  imdbdev_client.py  logger.py  movie_client.py  show_client.py
styles/: README.md  macchiato.qss  style.qss
utils/: cache_utilis.py  errors.py  get_lists.py  media.py  utils.py
