[project]
name = "movie-viewer"
version = "0.3.0"
description = "Watch downloaded movies and shows easly"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "nuitka>=4.0.2",
    "pillow>=11.2.1",
    "pyqt6>=6.9.0",
    "python-dotenv>=1.1.0",
    "qt-material>=2.17",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.9",
]

[tool.mypy]
show_error_codes = true
pretty = true
strict = true
warn_redundant_casts = true
warn_unused_ignores = true

warn_return_any = true
disallow_untyped_defs = true
disallow_untyped_calls = true

exclude = [
    'venv/*',
    '.venv/*',
    'build/*',
    'dist/*',
    '__pycache__/*',
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", 
    "F", 
    "I", 
    "B", 
    "C4",
    "UP", 
    "ARG", 
]
ignore = [
    "E501",
    "B008",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["movie_viewer"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"