[project]
name = "movie-viewer"
version = "0.3.0"
description = "Watch downloaded movies and shows easly"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "pillow>=11.2.1",
    "pyqt6>=6.9.0",
    "python-dotenv>=1.1.0",
    "qt-material>=2.17",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
pyinstaller = [
    "pyinstaller>=6.19.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", 
    "F", 
    "I", 
    "B", 
    "C4",
    "UP", 
    "ARG", 
]
ignore = [
    "E501",
    "B008",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["movie_viewer"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
